[gd_scene load_steps=4 format=2]

[ext_resource path="res://Inventory/InventoryDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Inventory/RemotePlayerInventoryDisplay.gd" type="Script" id=2]
[ext_resource path="res://Inventory/FurnaceView.gd" type="Script" id=4]

[node name="FurnaceView" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_clip_content = true
script = ExtResource( 4 )

[node name="FurnaceHBoxContainer" type="HBoxContainer" parent="." index="0"]
margin_right = 104.0
margin_bottom = 28.0

[node name="RemotePlayerInventoryDisplay" parent="FurnaceHBoxContainer" index="0" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 14.0
margin_right = 0.0
margin_bottom = 14.0
size_flags_vertical = 4
script = ExtResource( 2 )

[node name="InventoryVBoxContainer" type="VBoxContainer" parent="FurnaceHBoxContainer" index="1"]
margin_left = 4.0
margin_right = 104.0
margin_bottom = 28.0
size_flags_horizontal = 13
size_flags_vertical = 5

[node name="SourceHBoxContainer" type="HBoxContainer" parent="FurnaceHBoxContainer/InventoryVBoxContainer" index="0"]
margin_left = 50.0
margin_right = 50.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="FuelHBoxContainer" type="HBoxContainer" parent="FurnaceHBoxContainer/InventoryVBoxContainer" index="1"]
margin_top = 4.0
margin_right = 100.0
margin_bottom = 24.0
rect_clip_content = true
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Fuel" type="ProgressBar" parent="FurnaceHBoxContainer/InventoryVBoxContainer/FuelHBoxContainer" index="0"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
size_flags_vertical = 6
percent_visible = false

[node name="ProductHBoxContainer" type="HBoxContainer" parent="FurnaceHBoxContainer/InventoryVBoxContainer" index="2"]
margin_left = 50.0
margin_top = 28.0
margin_right = 50.0
margin_bottom = 28.0
size_flags_horizontal = 4
size_flags_vertical = 7
